--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^4.1.0",
     "pinia": "^3.0.3",
     "postcss-preset-env": "^10.2.2",
+    "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.5",
     "vue-router": "^4.5.1",
