--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,7 +4,9 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    
+    "target": "ESNext",
+    "module": "ESNext",
+    "verbatimModuleSyntax": false,
     "strict": false,
     "importHelpers": true,
     "moduleResolution": "Node",
@@ -20,7 +22,7 @@
     "noEmit": true,
     "useDefineForClassFields": true,
     "resolveJsonModule": true,
-    
+
     "types": ["vite/client"],
 
     "paths": {
