--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^13.3.0",
     "apexcharts": "^4.7.0",
     "date-fns": "^4.1.0",
+    "lightningcss": "^1.30.1",
     "pinia": "^3.0.3",
     "postcss-preset-env": "^10.2.2",
     "vite-plugin-vuetify": "^2.1.1",
